--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.11.2",
     "pi-gpio": "0.0.6",
-    "socket.io": "^1.3.4"
+    "socket.io": "^1.3.4",
+    "websocket": "^1.0.17"
   }
 }
