--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "express": "^4.11.2",
     "pi-gpio": "0.0.6",
     "socket.io": "^1.3.4",
-    "websocket": "^1.0.17"
+    "socket.io-client": "^1.3.4"
   }
 }
