--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.11.2",
     "fs": "0.0.2",
     "pi-gpio": "0.0.6",
+    "serialport": "^1.5.0",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.4"
   }
