Add serial support.

--- a/client-config.json
+++ b/client-config.json
@@ -1,6 +1,7 @@
 {
   "nogpio": true,
   "port": 4000,
-  "server": "http://localhost:3000"
+  "server": "http://localhost:3000",
+  "serial": "/dev/ttyAMA0"
 }
 
