--- a/client-config.json
+++ b/client-config.json
@@ -2,6 +2,6 @@
   "nogpio": true,
   "port": 4000,
   "server": "http://localhost:3000",
-  "serial": "/dev/ttyAMA0"
+  "serial": "/dev/ttyACM0"
 }
 
