--- a/client-config.json
+++ b/client-config.json
@@ -2,6 +2,6 @@
   "nogpio": true,
   "port": 4000,
   "server": "http://192.168.86.160:3000",
-  "serial": "/dev/ttyACM0"
+  "_serial": "/dev/ttyACM0"
 }
 
