--- a/client-config.json
+++ b/client-config.json
@@ -1,7 +1,8 @@
 {
   "nogpio": true,
   "port": 4000,
-  "server": "http://192.168.86.160:3000",
+  "server": "http://127.0.0.1:3000",
+  "_server": "http://192.168.86.160:3000",
   "_serial": "/dev/ttyACM0"
 }
 
