--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "PiRemote on Pi",
   "dependencies": {
     "express": "^4.11.2",
+    "extend": "^2.0.0",
     "fs": "0.0.2",
     "pi-gpio": "0.0.6",
     "serialport": "^1.5.0",
